--- a/exercises/02/index.html
+++ b/exercises/02/index.html
@@ -1,5 +1,54 @@
-<!doctype html>
-<html lang="en">
-<head><meta charset="utf-8"><title>Exercise 02</title></head>
-<body><h1>Hello, 02</h1></body>
+<!DOCTYPE html>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Perfil de Enrique Feria y Pedro Vila</title>
+    <link rel="stylesheet" href="./styles.css" />
+  </head>
+  <body>
+    <div class="page">
+      <header class="site-header">
+        <h1>Enrique Feria y Pedro Vila</h1>
+        <p>
+          ¡Hola! Somos <strong>Enrique Feria</strong> y <strong>Pedro Vila</strong>, estudiantes de desarrollo web apasionados
+          por crear experiencias digitales <em>claras, accesibles y útiles</em>.
+        </p>
+      </header>
+
+      <main class="site-main">
+        <section class="profile">
+          <img src="../foto1.png" alt="Foto de Enrique Feria y Pedro Vila" width="200" />
+          <article>
+            <h2>Sobre nosotros</h2>
+            <p>
+              Nos interesa el mundo de la programación, el diseño web y la tecnología. Actualmente trabajamos en proyectos
+              académicos donde combinamos código y creatividad para resolver problemas reales.
+            </p>
+          </article>
+        </section>
+
+        <section class="interests">
+          <h2>Intereses destacados</h2>
+          <ul>
+            <li>Programación web con HTML, CSS y JavaScript.</li>
+            <li>Aprender nuevas herramientas como Vite y GitHub.</li>
+            <li>Colaborar en proyectos en equipo.</li>
+          </ul>
+        </section>
+
+        <section class="contact">
+          <h2>Conecta con nosotros</h2>
+          <p>
+            Puedes visitar nuestro perfil en
+            <a href="https://www.linkedin.com" target="_blank" rel="noopener">LinkedIn</a>.
+          </p>
+        </section>
+      </main>
+
+      <footer class="site-footer">
+        <small>&copy; 2025 Enrique Feria y Pedro Vila. Todos los derechos reservados.</small>
+      </footer>
+    </div>
+  </body>
 </html>
